RESOLVED FIXED54007
[Qt] Should not always define USE_SYSTEM_MALLOC
https://bugs.webkit.org/show_bug.cgi?id=54007
Summary [Qt] Should not always define USE_SYSTEM_MALLOC
Balazs Kelemen
Reported 2011-02-08 08:38:56 PST
After http://trac.webkit.org/changeset/76716 we accidentally always define USE_SYSTEM_MALLOC.
Attachments
Patch (1.13 KB, patch)
2011-02-08 08:43 PST, Balazs Kelemen
no flags
Balazs Kelemen
Comment 1 2011-02-08 08:43:40 PST
Laszlo Gombos
Comment 2 2011-02-08 08:49:54 PST
Hoops. Thanks.
Balazs Kelemen
Comment 3 2011-02-08 09:28:03 PST
Comment on attachment 81639 [details] Patch Clearing flags on attachment: 81639 Committed r77948: <http://trac.webkit.org/changeset/77948>
Balazs Kelemen
Comment 4 2011-02-08 09:28:10 PST
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 5 2011-02-08 10:15:18 PST
http://trac.webkit.org/changeset/77948 might have broken Qt Linux Release The following tests are not passing: http/tests/websocket/tests/workers/close-in-onmessage-crash.html
Note You need to log in before you can comment on or make changes to this bug.