2011-02-08  Balazs Kelemen  <kbalazs@webkit.org>

Reviewed by Andreas Kling.

        [Qt] Should not always define USE_SYSTEM_MALLOC
        https://bugs.webkit.org/show_bug.cgi?id=54007

        * wtf/Platform.h:

Canonical link: https://commits.webkit.org/68007@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77948 268f45cc-cd09-0410-ab3c-d52691b4dbfc