Source/JavaScriptCore/wtf/Platform.h
@@ -837,7 +837,7 @@
 #if PLATFORM(QT)
 /* We must not customize the global operator new and delete for the Qt port. */
 #define ENABLE_GLOBAL_FASTMALLOC_NEW 0
-#if !PLATFORM(UNIX) || OS(SYMBIAN)
+#if !OS(UNIX) || OS(SYMBIAN)
 #define USE_SYSTEM_MALLOC 1
 #endif
 #endif
